--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/c,macos,windows,mplabx
-# Edit at https://www.toptal.com/developers/gitignore?templates=c,macos,windows,mplabx
-
-### C ###
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+# Created by https://www.toptal.com/developers/gitignore/api/macos,windows
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows
 
 ### macOS ###
 # General
@@ -88,36 +34,6 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
-### MPLabX ###
-#Ignore List for Microchip's MPLAB X IDE
-#It's a form of NetBeans with vendor specific changes
-#Taken from zeha on GIST https://gist.github.com/zeha/5999375
-#Updated by Cristian Cristea (https://github.com/cristiancristea00)
-
-*.pre
-*.p1
-*.lst
-*.sym
-*.sdb
-*.obj.dmp
-*.mk
-*.properties
-*.production
-*.debug
-html/
-nbproject/private/
-nbproject/Package-*.bash
-build/
-nbbuild/
-dist/
-nbdist/
-nbactions.xml
-nb-configuration.xml
-funclist
-nbproject/Makefile-*
-disassembly/
-.generated_files/
-
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -144,4 +60,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/c,macos,windows,mplabx
+# End of https://www.toptal.com/developers/gitignore/api/macos,windows
